--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ping-pong",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +11,8 @@
     "prompt": "^1.0.0"
   },
   "devDependencies": {
+    "bower-files": "^3.11.3",
+    "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "del": "^2.2.0",
@@ -26,5 +27,6 @@
     "gulp-util": "^3.0.7",
     "mocha": "^2.4.5",
     "vinyl-source-stream": "^1.1.0"
-  }
+  },
+  "description": ""
 }
